# SUSCRAFT-ANDROID

./: .gitignore  LICENCE  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
MinecraftLauncher/.github/workflows/: main.yml
MinecraftLauncher/app/: CMakeLists.txt  build.gradle
MinecraftLauncher/app/src/main/: AndroidManifest.xml
MinecraftLauncher/app/src/main/java/com/launcher/core/: AccountManager.java  BrightnessUtil.java  CommandPipe.java  ConcurrencyManager.java  CrashReporter.java  DeviceUtils.java  FabricManager.java  GameActivity.java  GlobalState.java  InputDispatcher.java  JoystickView.java  KeyMapper.java  LauncherEngine.java  LocalVersion.java  LogRedirector.java  NativeLoader.java  ResolutionScaler.java  RuntimeCheck.java  SandboxUtil.java  ServerPinger.java  ShaderLoader.java  StateController.java  UIUtils.java  UpdateChecker.java  XmlManifestParser.java
MinecraftLauncher/app/src/main/res/layout/: activity_main.xml  item_account.xml
MinecraftLauncher/app/src/main/res/values/: colors.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  egl_bridge.cpp  native-lib.cpp  window_handler.cpp
app/src/main/java/com/launcher/core/: AdvancedClasspath.java  ArgumentModel.java  (+43 more)
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_splash.xml  layout_console.xml  layout_loading_overlay.xml  overlay_controls.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/xml/: root_preferences.xml
